# scrbblr

./: AGENTS.md  Cargo.toml  FUTURE.md  README.md  install.sh  mpris-scrobbler-publish.sh  scrbblr-publish.sh  uninstall.sh
contrib/examples/: publish.conf.example
contrib/systemd/user/: mpris-scrobbler.service  scrbblr.service
src/: db.rs  enrich.rs  main.rs  mpd.rs  report.rs  watcher.rs
