[package]
name = "scrbblr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
libc = "0.2"
image = { version = "0.25", features = ["jpeg"] }
